add start of api

--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "8e12dfa0-5d10-4b69-81ee-8efd2627538b"
 authors = ["Wylie"]
 version = "1.0.0-DEV"
 
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+
 [compat]
+Dates = "1.11.0"
+HTTP = "1.10.12"
 julia = "1.6.7"
 
 [extras]
