--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,12 @@ version = "1.0.0-DEV"
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [compat]
 Dates = "1.11.0"
-HTTP = "1.10.12"
+HTTP = "1.6.7"
+JSON3 = "1.14.1"
 julia = "1.6.7"
 
 [extras]
