--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,5 @@
 name: CI
+
 on:
   push:
     branches:
@@ -24,7 +25,7 @@ jobs:
       matrix:
         version:
           - '1.11'
-          - '1.6'
+          - 'lts'
           - 'pre'
         os:
           - ubuntu-latest
@@ -38,4 +39,7 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
+      - name: Run tests
+        env:
+          OURAKEY: ${{secrets.OURATOKEN}}
+        run: julia --color=yes --project=@. -e 'using Pkg; Pkg.test()'
