--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-          file: lcov.info
+          files: lcov.info
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_ORG_TOKEN }}
           slug: wylie39/Oura.jl
